django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  labels:
    app: django
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - image: ndrohith09/djangokubernetesproject81:latest
          name: django
          ports:
            - containerPort: 8001
              name: gunicorn
